# Notebook.dtx.v1

./: .gitignore  chartter.code-workspace  create_taframework.sh  package-lock.json  package.json  pyproject.toml  readme  trendl.exemple.py
Notebooks/: 15MIN-Updated.csv  arc.ipsum.ipynb  ipsum.ipynb  lorem.ipynb  soren.ipynb  trading_journal.csv
Notebooks-2/: CrossSignal_Trading_Journal.csv  XAUUSDM15.csv  arc-2.lorem.ipynb  arc.doller.ipynb  arc.ipsum.ipynb  backtrader.ipynb  doller.ipynb  ipsum.ipynb  lorem.ipynb  trades_log.csv
Notebooks-2/ploter/: __init__.py  __main__.py  arc-1.plot_strategy.py  plot_strategy.py
Notes-3/: 15MIN-Updated.csv  Stratagy.ipynb  applyiedMacd-1.csv  bktst-2.ipynb  bktst-3.ipynb  bt.result.csv  elelm-rect-2-arc1.ipynb  elelm-rect-2.ipynb  elem-boxonCandelChart.ipynb  lore-2.ipynb  lorem.ipynb  result-plot.ipynb  trades_plot.ipynb  tst-plots-3.ipynb  tst-plots-4.ipynb  vertical-line.vl.ipynb
Notes-4/: Stratagy.ipynb  bktst-2.ipynb  see-tst-results.ipynb  tstbk.arc-1.ipynb  tstbk.ipynb
Notes-4.bkc/: Stratagy.ipynb  bktst-2.ipynb  showtrades.ipynb
Notes-4/bt_mods/: __init__.py  backtester.py  strategy.py
Notes-5/: Stratagy.ipynb  tstbk.ipynb
Stratagy_builder-1/: lorem.ipynb  lorem.py  stratagy-builder-2.ipynb  stratagy-builder.ipynb
conf/: autopush.js
n-pack-1/: Untitled-1.py  auto-indig.csv  note-1.ipynb  npk-Samadhan.ipynb  npk-sahayak-1.ipynb  sahayak-2.ipynb  sahayak-3.ipynb  sahayak-readme.md  trendl.exemple-3.py  trendl.exemple.py
npk-6/: samadhan-1.ipynb
plotter-pkg/: Untitled-1.py  plot.ipynb
(+16 files in other folders)
